force-app/main/default/objects/Genesys_Routing__c/Genesys_Routing__c.object-meta.xml
<CustomObject>
    <label>Genesys Routing</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Genesys Routing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Genesys Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>