force-app/main/default/objects/Genesys_Routing__c/fields/Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Action_Reason__c</fullName>
    <label>Action Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>