force-app/main/default/objects/Genesys_Routing__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <label>Email Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>