force-app/main/default/objects/Genesys_Routing__c/fields/EmailFrom__c.field-meta.xml
<CustomField>
    <fullName>EmailFrom__c</fullName>
    <label>Email From</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>