force-app/main/default/objects/Genesys_Routing__c/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <label>Email Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>