force-app/main/default/objects/Genesys_Routing__c/fields/EmailTo__c.field-meta.xml
<CustomField>
    <fullName>EmailTo__c</fullName>
    <label>Email To</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>