force-app/main/default/objects/Genesys_Routing__c/fields/Integrate_with_Genesys_Routing__c.field-meta.xml
<CustomField>
    <fullName>Integrate_with_Genesys_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrate with Genesys Routing</label>
    <type>Checkbox</type>
</CustomField>