force-app/main/default/objects/Genesys_Routing__c/fields/LastAgentId__c.field-meta.xml
<CustomField>
    <fullName>LastAgentId__c</fullName>
    <label>Last Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>