force-app/main/default/objects/Genesys_Routing__c/fields/MediaType__c.field-meta.xml
<CustomField>
    <fullName>MediaType__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDCEmailCase</fullName>
            </value>
            <value>
                <fullName>SFDCTask</fullName>
            </value>
            <value>
                <fullName>SFDCEmailTask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>