force-app/main/default/objects/Genesys_Routing__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Genesys Routings</relationshipLabel>
    <relationshipName>Genesys_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>