force-app/main/default/objects/Genesys_Routing__c/fields/Send_to_Genesys_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Genesys_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Send to Genesys Time</label>
    <type>DateTime</type>
</CustomField>