force-app/main/default/objects/Genesys_Routing__c/fields/SFDCAcctLocationTimeZone__c.field-meta.xml
<CustomField>
    <fullName>SFDCAcctLocationTimeZone__c</fullName>
    <label>Account Location Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>