force-app/main/default/objects/Genesys_Routing__c/fields/SFDCCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>SFDCCaseNumber__c</fullName>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>