force-app/main/default/objects/Genesys_Routing__c/fields/SFDCCaseReason__c.field-meta.xml
<CustomField>
    <fullName>SFDCCaseReason__c</fullName>
    <label>Case Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>