force-app/main/default/objects/Genesys_Routing__c/fields/SFDCCaseRefNo__c.field-meta.xml
<CustomField>
    <fullName>SFDCCaseRefNo__c</fullName>
    <label>Case Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>