force-app/main/default/objects/Genesys_Routing__c/fields/SFDCCaseSubCaseType__c.field-meta.xml
<CustomField>
    <fullName>SFDCCaseSubCaseType__c</fullName>
    <label>Case Sub Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>