force-app/main/default/objects/Genesys_Routing__c/fields/SFDCChildVendorAcctNo__c.field-meta.xml
<CustomField>
    <fullName>SFDCChildVendorAcctNo__c</fullName>
    <label>SFDCChildVendorAcctNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>