force-app/main/default/objects/Genesys_Routing__c/fields/SFDCChildVendorName__c.field-meta.xml
<CustomField>
    <fullName>SFDCChildVendorName__c</fullName>
    <label>SFDCChildVendorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>