force-app/main/default/objects/Genesys_Routing__c/fields/SFDCContactSegment__c.field-meta.xml
<CustomField>
    <fullName>SFDCContactSegment__c</fullName>
    <label>Contact Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>