force-app/main/default/objects/Genesys_Routing__c/fields/SFDCFunction__c.field-meta.xml
<CustomField>
    <fullName>SFDCFunction__c</fullName>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>