force-app/main/default/objects/Genesys_Routing__c/fields/SFDCIsAcctVendor__c.field-meta.xml
<CustomField>
    <fullName>SFDCIsAcctVendor__c</fullName>
    <label>Is Account Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>