force-app/main/default/objects/Genesys_Routing__c/fields/SFDCObjName__c.field-meta.xml
<CustomField>
    <fullName>SFDCObjName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>