force-app/main/default/objects/Genesys_Routing__c/fields/SFDCObjRecordID__c.field-meta.xml
<CustomField>
    <fullName>SFDCObjRecordID__c</fullName>
    <label>Object Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>