force-app/main/default/objects/Genesys_Routing__c/fields/SFDCObjType__c.field-meta.xml
<CustomField>
    <fullName>SFDCObjType__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>