force-app/main/default/objects/Genesys_Routing__c/fields/SFDCParentVendorAcctNo__c.field-meta.xml
<CustomField>
    <fullName>SFDCParentVendorAcctNo__c</fullName>
    <label>SFDCParentVendorAcctNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>