force-app/main/default/objects/Genesys_Routing__c/fields/SFDCParentVendorName__c.field-meta.xml
<CustomField>
    <fullName>SFDCParentVendorName__c</fullName>
    <label>SFDCParentVendorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>