force-app/main/default/objects/Genesys_Routing__c/fields/SFDCRecordType__c.field-meta.xml
<CustomField>
    <fullName>SFDCRecordType__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>