force-app/main/default/objects/Genesys_Routing__c/fields/SFDCRouteEndTime__c.field-meta.xml
<CustomField>
    <fullName>SFDCRouteEndTime__c</fullName>
    <defaultValue>&apos;17:00:00.000&apos;</defaultValue>
    <label>SFDCRouteEndTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>