force-app/main/default/objects/Genesys_Routing__c/fields/SFDCRoutePriority__c.field-meta.xml
<CustomField>
    <fullName>SFDCRoutePriority__c</fullName>
    <description>To store routing Priority e.g. P1,P2.</description>
    <label>SFDCRoutePriority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>