force-app/main/default/objects/Genesys_Routing__c/fields/SFDCRouteStartTime__c.field-meta.xml
<CustomField>
    <fullName>SFDCRouteStartTime__c</fullName>
    <defaultValue>&apos;09:00:00.000&apos;</defaultValue>
    <label>SFDCRouteStartTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>