force-app/main/default/objects/Genesys_Routing__c/fields/SFDCServiceFlag__c.field-meta.xml
<CustomField>
    <fullName>SFDCServiceFlag__c</fullName>
    <label>SFDCServiceFlag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>