force-app/main/default/objects/Genesys_Routing__c/fields/SFDCTaskCaseId__c.field-meta.xml
<CustomField>
    <fullName>SFDCTaskCaseId__c</fullName>
    <label>Task Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>