force-app/main/default/objects/Genesys_Routing__c/fields/SFDCTaskDescCode__c.field-meta.xml
<CustomField>
    <fullName>SFDCTaskDescCode__c</fullName>
    <label>SFDCTaskDescCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>