force-app/main/default/objects/Genesys_Routing__c/fields/SFDCTaskDescription__c.field-meta.xml
<CustomField>
    <fullName>SFDCTaskDescription__c</fullName>
    <label>Task Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>