force-app/main/default/objects/Genesys_Routing__c/fields/SFDCTaskDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>SFDCTaskDueDateTime__c</fullName>
    <label>Task Due Date Time</label>
    <type>DateTime</type>
</CustomField>