force-app/main/default/objects/Genesys_Routing__c/fields/SFDCVendorPreferredChannel__c.field-meta.xml
<CustomField>
    <fullName>SFDCVendorPreferredChannel__c</fullName>
    <label>SFDCVendorPreferredChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>