force-app/main/default/objects/Genesys_Routing__c/recordTypes/Email_to_Case.recordType-meta.xml
<RecordType>
    <fullName>Email_to_Case</fullName>
    <active>true</active>
    <label>Email to Case</label>
</RecordType>