force-app/main/default/objects/Genesys_Routing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SFDCAcctID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SFDCTaskDescCode__c</columns>
    <columns>SFDCCaseNumber__c</columns>
    <columns>SFDCRecordType__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>